--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <button data-tab="homework" id="homework-dashboard-tab" class="dashboard-tab py-4 px-1 border-b-2 font-medium text-sm">오늘의 숙제</button>
                     <button data-tab="life-rules-management" id="life-rules-management-dashboard-tab" class="dashboard-tab py-4 px-1 border-b-2 font-medium text-sm hidden">생활 규칙 관리</button>
                     <button data-tab="learning-problems" id="learning-problems-dashboard-tab" class="dashboard-tab py-4 px-1 border-b-2 font-medium text-sm hidden">학습 문제 관리</button>
+                    <button data-tab="work-management" id="work-management-tab" class="dashboard-tab py-4 px-1 border-b-2 font-medium text-sm hidden">업무 관리</button>
                 </nav>
             </div>
 
@@ -147,37 +148,6 @@
                             <button id="assign-homework-start-btn" class="w-full py-2 mb-2 rounded-md btn bg-amber-500 hover:bg-amber-600 text-white">숙제 배부하기</button>
                             <button id="assign-life-rule-start-btn" class="w-full py-2 mb-2 rounded-md btn bg-green-500 hover:bg-green-600 text-white">생활 규칙 배부하기</button>
                             <button id="admin-page-btn" class="w-full py-2 rounded-md btn bg-red-500 hover:bg-red-600 text-white">관리자 페이지로 이동</button>
-                        </div>
-                        <div id="teacher-class-section" class="hidden bg-white p-6 rounded-lg shadow-md">
-                            <div class="flex justify-between items-center mb-2">
-                                <h2 class="text-xl font-bold">👩‍🏫 내 학급</h2>
-                                <button id="create-class-btn" class="btn btn-primary">내 학급 만들기</button>
-                                <button id="add-class-student-btn" class="btn btn-secondary hidden">+ 추가</button>
-                            </div>
-                            <p id="class-name" class="font-semibold mb-2"></p>
-                            <ul id="class-student-list" class="space-y-1 text-sm"></ul>
-                        </div>
-                        <div id="teacher-calendar-section" class="hidden bg-white p-6 rounded-lg shadow-md">
-                            <h2 class="text-xl font-bold mb-2">📅 배부 캘린더</h2>
-                            <div class="flex justify-between items-center mb-2">
-                                <button id="prev-month-btn" class="btn btn-secondary btn-xs">◀</button>
-                                <span id="calendar-month" class="font-semibold"></span>
-                                <button id="next-month-btn" class="btn btn-secondary btn-xs">▶</button>
-                            </div>
-                            <table class="min-w-full text-xs text-center border" id="teacher-calendar">
-                                <thead>
-                                    <tr>
-                                        <th class="p-1">일</th>
-                                        <th class="p-1">월</th>
-                                        <th class="p-1">화</th>
-                                        <th class="p-1">수</th>
-                                        <th class="p-1">목</th>
-                                        <th class="p-1">금</th>
-                                        <th class="p-1">토</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="calendar-body"></tbody>
-                            </table>
                         </div>
                     </div>
                 </div>
@@ -240,6 +210,21 @@
                 </div>
                 <div id="life-rule-list" class="bg-white p-4 rounded-lg shadow">
                     <!-- Life rules will be rendered here -->
+                </div>
+            </div>
+            <div id="work-management-tab-content" class="tab-content">
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-2xl font-bold">📂 업무 관리</h2>
+                    <div class="space-x-2">
+                        <button id="work-create-category-btn" class="btn btn-secondary">카테고리 생성</button>
+                        <select id="work-category-filter" class="p-2 border rounded">
+                            <option value="">전체</option>
+                        </select>
+                        <button id="open-draft-modal-btn" class="btn btn-primary">AI 기안 만들기</button>
+                    </div>
+                </div>
+                <div id="work-doc-list" class="bg-white p-4 rounded-lg shadow">
+                    <p class="text-center text-gray-500">작성된 문서가 없습니다.</p>
                 </div>
             </div>
         </div>
@@ -592,6 +577,68 @@
                 </div>
                 <div id="result-message" class="text-sm"></div>
                 <button id="complete-manual-problem-btn" class="btn btn-primary btn-disabled" disabled>숙제 완료하기</button>
+            </div>
+        </div>
+    </div>
+    <div id="draft-modal" class="modal-overlay hidden">
+        <div class="modal-content modal-content-lg">
+            <span class="close-button" id="close-draft-modal-btn">&times;</span>
+            <h3 class="text-xl font-bold mb-4">AI 기안 만들기</h3>
+            <form id="draft-form" class="text-left space-y-4 overflow-y-auto max-h-[70vh] p-1">
+                <div>
+                    <label for="draft-subject" class="block text-sm font-medium">주제</label>
+                    <input type="text" id="draft-subject" class="w-full p-2 border rounded-md form-input" required>
+                </div>
+                <div>
+                    <label for="draft-notes" class="block text-sm font-medium">참고 사항</label>
+                    <textarea id="draft-notes" rows="3" class="w-full p-2 border rounded-md form-input"></textarea>
+                </div>
+                <div>
+                    <label class="block text-sm font-medium mb-1">관련 근거 여부</label>
+                    <div class="space-x-4">
+                        <label><input type="radio" name="has-reference" value="no" checked> 없음</label>
+                        <label><input type="radio" name="has-reference" value="yes"> 있음</label>
+                    </div>
+                    <div id="reference-container" class="mt-2 space-y-2 hidden">
+                        <!-- reference fields will be added here -->
+                    </div>
+                    <button type="button" id="add-reference-btn" class="mt-2 btn btn-secondary hidden">+ 추가</button>
+                </div>
+                <div>
+                    <label class="block text-sm font-medium mb-1">붙임 문서 여부</label>
+                    <div class="space-x-4">
+                        <label><input type="radio" name="has-attachment" value="no" checked> 없음</label>
+                        <label><input type="radio" name="has-attachment" value="yes"> 있음</label>
+                    </div>
+                    <div id="attachment-container" class="mt-2 space-y-2 hidden">
+                        <!-- attachment fields will be added here -->
+                    </div>
+                    <button type="button" id="add-attachment-btn" class="mt-2 btn btn-secondary hidden">+ 추가</button>
+                </div>
+                <div class="text-right">
+                    <button type="submit" class="btn btn-primary">AI 기안 생성</button>
+                </div>
+            </form>
+            <div id="draft-result" class="mt-4 hidden">
+                <div class="flex justify-between items-center mb-2">
+                    <h4 class="font-bold">제목</h4>
+                    <div class="space-x-2">
+                        <button id="edit-title-btn" class="btn btn-secondary btn-xs">ai 편집</button>
+                        <button id="copy-title-btn" class="btn btn-secondary btn-xs">복사</button>
+                    </div>
+                </div>
+                <p id="generated-title" class="border p-2 rounded mb-4"></p>
+                <div class="flex justify-between items-center mb-2">
+                    <h4 class="font-bold">본문</h4>
+                    <div class="space-x-2">
+                        <button id="edit-body-btn" class="btn btn-secondary btn-xs">ai 편집</button>
+                        <button id="copy-body-btn" class="btn btn-secondary btn-xs">복사</button>
+                    </div>
+                </div>
+                <pre id="generated-body" class="border p-2 rounded whitespace-pre-wrap"></pre>
+                <div class="text-right mt-4">
+                    <button id="save-draft-btn" class="btn btn-primary">완료</button>
+                </div>
             </div>
         </div>
     </div>
