feat: add logout and update book list

--- a/public/book.html
+++ b/public/book.html
@@ -70,6 +70,10 @@
     </div>
 
     <div id="book-content" class="hidden">
+    <div class="max-w-7xl mx-auto mb-4 flex justify-between items-center">
+        <h1 class="text-2xl font-bold">에이두 AI 책만들기</h1>
+        <button id="book-logout-btn" class="text-sm text-gray-500 underline">로그아웃</button>
+    </div>
     <div id="book-list-section" class="max-w-7xl mx-auto mb-4">
         <div class="bg-white p-4 rounded-lg shadow">
             <div id="user-info" class="mb-4">
@@ -78,7 +82,6 @@
             </div>
             <div class="flex items-center gap-2 overflow-x-auto">
                 <div id="book-list" class="flex gap-2"></div>
-                <button id="add-book-btn" class="ml-auto bg-blue-500 text-white px-4 py-2 rounded-lg whitespace-nowrap">+ 책 추가/1토큰</button>
             </div>
         </div>
     </div>
@@ -94,7 +97,7 @@
                     <button id="generate-images-btn" onclick="completeManualBook()" class="bg-purple-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-purple-700 disabled:bg-gray-400 disabled:cursor-not-allowed">그림 생성하기</button>
                     <button id="save-book-btn" onclick="saveBookDraft()" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed">저장하기</button>
                     <button id="save-book-pdf-btn" onclick="downloadBookAsPDF()" class="bg-green-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-700 hidden">PDF 저장</button>
-                    <button id="register-library-btn" onclick="registerToLibrary()" class="bg-orange-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-orange-600 disabled:bg-gray-400 disabled:cursor-not-allowed hidden" disabled>도서관 등록하기</button>
+                    <button id="register-library-btn" onclick="registerToLibrary()" class="bg-orange-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-orange-600 disabled:bg-gray-400 disabled:cursor-not-allowed hidden" disabled>책 완성</button>
                 </div>
             </header>
 
@@ -127,7 +130,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, getDoc, setDoc, serverTimestamp, updateDoc, increment, collection, addDoc, getDocs, query, where } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getStorage, ref as storageRef, uploadString, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
 
@@ -183,6 +186,17 @@
                 item.addEventListener('click', () => loadBook(data.bookId));
                 listEl.appendChild(item);
             });
+            const addBtn = document.createElement('button');
+            addBtn.id = 'add-book-btn';
+            addBtn.className = 'text-left px-4 py-2 bg-gray-100 rounded-lg hover:bg-gray-200 flex-shrink-0';
+            addBtn.textContent = '+ 책 추가/1토큰';
+            addBtn.addEventListener('click', () => {
+                if (!bookAuthorUid) return;
+                newBookTitleInput.value = '';
+                addBookModal.classList.remove('hidden');
+                newBookTitleInput.focus();
+            });
+            listEl.appendChild(addBtn);
         }
 
         async function loadBook(id) {
@@ -890,17 +904,18 @@
         teacherLoginTab.addEventListener('click', () => switchLoginTab('teacher'));
         switchLoginTab('student');
 
-        const addBookBtn = document.getElementById('add-book-btn');
         const addBookModal = document.getElementById('add-book-modal');
         const cancelAddBookBtn = document.getElementById('cancel-add-book');
         const confirmAddBookBtn = document.getElementById('confirm-add-book');
         const newBookTitleInput = document.getElementById('new-book-title');
+        const bookLogoutBtn = document.getElementById('book-logout-btn');
 
-        addBookBtn.addEventListener('click', () => {
-            if (!bookAuthorUid) return;
-            newBookTitleInput.value = '';
-            addBookModal.classList.remove('hidden');
-            newBookTitleInput.focus();
+        bookLogoutBtn.addEventListener('click', async () => {
+            try {
+                await signOut(auth);
+            } catch (error) {
+                console.error('Error signing out:', error);
+            }
         });
 
         cancelAddBookBtn.addEventListener('click', () => {
